// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Button Performance 1`] = `<ButtonsPerformance />`;

exports[`Storyshots Button Button appearances 1`] = `
Array [
  <GridX />,
  <GridX />,
  <GridX />,
  <GridX />,
  <GridX />,
  <GridX />,
  <GridX />,
]
`;

exports[`Storyshots Button Button group 1`] = `
<XYGridElement
  alignX="left"
  className="gc-grid-x"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    key=".0"
    vertical={false}
  >
    <ButtonGroup>
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        First Button
      </Button>
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Second Button
      </Button>
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Button Tertius
      </Button>
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Fourth Button
      </Button>
    </ButtonGroup>
  </Cell>
  <Cell
    key=".1"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <ButtonGroup>
      <Button
        appearance="primary"
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Alpha
      </Button>
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Beta
      </Button>
      <Button
        appearance="warning"
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Delta
      </Button>
      <Button
        appearance="link"
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Delta
      </Button>
    </ButtonGroup>
  </Cell>
  <Cell
    key=".2"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <ButtonGroup
      appearance="link"
    >
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Vuejs
      </Button>
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Angular
      </Button>
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        React
      </Button>
    </ButtonGroup>
  </Cell>
</XYGridElement>
`;

exports[`Storyshots Button Button options 1`] = `
<XYGridElement
  alignX="left"
  className="gc-grid-x"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    key=".0"
    vertical={false}
  >
    <Button
      iconBefore={
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                640,
                512,
                Array [],
                "f0f4",
                "M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z",
              ],
              "iconName": "coffee",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      }
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={false}
    >
      Icon Before
    </Button>
  </Cell>
  <Cell
    key=".1"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      iconAfter={
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                640,
                512,
                Array [],
                "f0f4",
                "M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z",
              ],
              "iconName": "coffee",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      }
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={false}
    >
      Icon After
    </Button>
  </Cell>
  <Cell
    key=".2"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      href="//github.com/growcss/growcss"
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={false}
    >
      with href attribute
    </Button>
  </Cell>
  <Cell
    key=".3"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      href="//github.com/growcss/growcss"
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={false}
    >
      with href attribute + no target
    </Button>
  </Cell>
  <Cell
    key=".4"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      href="//github.com/growcss/growcss"
      iconBefore={
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                192,
                512,
                Array [],
                "f12a",
                "M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z",
              ],
              "iconName": "exclamation",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      }
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={false}
    >
      with href attribute + icon
    </Button>
  </Cell>
  <Cell
    key=".5"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      href="//github.com/growcss/growcss"
      iconBefore={
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                192,
                512,
                Array [],
                "f12a",
                "M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z",
              ],
              "iconName": "exclamation",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      }
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={false}
      target="_blank"
    >
      with href attribute + icon +  target
    </Button>
  </Cell>
  <Cell
    key=".6"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      inline={false}
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={true}
    >
      Fit Container
    </Button>
  </Cell>
  <Cell
    key=".7"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      iconBefore={
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                192,
                512,
                Array [],
                "f12a",
                "M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z",
              ],
              "iconName": "exclamation",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      }
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={true}
    >
      Button with should fit container and before icon
    </Button>
  </Cell>
  <Cell
    key=".8"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
    vertical={false}
  >
    <Button
      iconAfter={
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                192,
                512,
                Array [],
                "f12a",
                "M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z",
              ],
              "iconName": "exclamation",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      }
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={true}
    >
      Button with should fit container and after icon
    </Button>
  </Cell>
</XYGridElement>
`;

exports[`Storyshots Button Button spacing 1`] = `
<div>
  <GridX>
    <Cell
      small={6}
      vertical={false}
    >
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Default
      </Button>
    </Cell>
    <Cell
      small={6}
      vertical={false}
    >
      <Button
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
        spacing="compact"
      >
        Compact
      </Button>
    </Cell>
  </GridX>
  <GridX>
    <Cell
      small={4}
      vertical={false}
    >
      <Button
        appearance="link"
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Default
      </Button>
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      <Button
        appearance="link"
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
        spacing="compact"
      >
        Compact
      </Button>
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      <Button
        appearance="link"
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
        spacing="none"
      >
        None
      </Button>
    </Cell>
  </GridX>
</div>
`;

exports[`Storyshots Button Button theming 1`] = `
<div>
  <ThemeProvider
    theme={
      Object {
        "button": Object {
          "theme": Object {
            "primary": Object {
              "background": Object {
                "active": "hsl(261.79999999999995, 46.8%, 63.1%)",
                "default": "hsl(261.79999999999995, 46.8%, 63.1%)",
                "disabled": "hsl(0, 0%, 96.1%)",
                "hover": "hsl(261.29999999999995, 46.3%, 73.7%)",
                "selected": "hsl(261.9, 46.7%, 55.1%)",
              },
              "boxShadowColor": Object {
                "focus": "hsl(0, 0%, 96.1%)",
              },
              "color": Object {
                "default": "hsl(0, 0%, 100%)",
                "disabled": "hsl(0, 0%, 87.8%)",
                "selected": "hsl(0, 0%, 100%)",
              },
            },
          },
        },
      }
    }
  >
    <ButtonGroup>
      <Button
        appearance="primary"
        isDisabled={false}
        isSelected={false}
        shouldFitContainer={false}
      >
        Button
      </Button>
      <Button
        appearance="primary"
        isDisabled={true}
        isSelected={false}
        shouldFitContainer={false}
      >
        Disabled button
      </Button>
      <Button
        appearance="primary"
        isDisabled={false}
        isSelected={true}
        shouldFitContainer={false}
      >
        Selected
      </Button>
    </ButtonGroup>
  </ThemeProvider>
  <div
    style={
      Object {
        "background": "hsl(0, 0%, 87.8%)",
        "marginTop": "10px",
        "padding": "20px",
      }
    }
  >
    <Button
      appearance="danger"
      displayType="ghost"
      isDisabled={false}
      isSelected={false}
      shouldFitContainer={false}
    >
      A Ghost button
    </Button>
  </div>
</div>
`;

exports[`Storyshots Button Button truncation 1`] = `
<div
  style={
    Object {
      "width": "190px",
    }
  }
>
  <Button
    iconBefore={
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              192,
              512,
              Array [],
              "f12a",
              "M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z",
            ],
            "iconName": "exclamation",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    }
    isDisabled={false}
    isSelected={false}
    shouldFitContainer={false}
    style={
      Object {
        "width": "30px",
      }
    }
  >
    exclamation
  </Button>
  <Button
    isDisabled={false}
    isSelected={false}
    shouldFitContainer={false}
  >
    I am wider than my parent
  </Button>
  <Button
    iconBefore={
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              192,
              512,
              Array [],
              "f12a",
              "M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z",
            ],
            "iconName": "exclamation",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    }
    isDisabled={false}
    isSelected={false}
    shouldFitContainer={false}
  >
    I am wider than my parent
  </Button>
  <Button
    iconAfter={
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f063",
              "M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z",
            ],
            "iconName": "arrow-down",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    }
    isDisabled={false}
    isSelected={false}
    shouldFitContainer={false}
  >
    I am wider than my parent
  </Button>
</div>
`;
